# pvr.kofin

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.android-build  FindJsonCpp.cmake  README.md  azure-pipelines.yml
.github/workflows/: build.yml  release.yml
depends/common/jsoncpp/: flags.txt  jsoncpp.txt
depends/common/zlib/: zlib.txt
pvr.kofin/: addon.xml.in  changelog.txt
pvr.kofin/resources/: settings.xml
pvr.kofin/resources/language/resource.language.af_za/: strings.po
pvr.kofin/resources/language/resource.language.am_et/: strings.po
pvr.kofin/resources/language/resource.language.ar_sa/: strings.po
pvr.kofin/resources/language/resource.language.ast_es/: strings.po
pvr.kofin/resources/language/resource.language.az_az/: strings.po
pvr.kofin/resources/language/resource.language.be_by/: strings.po
pvr.kofin/resources/language/resource.language.bg_bg/: strings.po
pvr.kofin/resources/language/resource.language.bs_ba/: strings.po
pvr.kofin/resources/language/resource.language.ca_es/: strings.po
pvr.kofin/resources/language/resource.language.cs_cz/: strings.po
pvr.kofin/resources/language/resource.language.cy_gb/: strings.po
pvr.kofin/resources/language/resource.language.da_dk/: strings.po
pvr.kofin/resources/language/resource.language.de_de/: strings.po
pvr.kofin/resources/language/resource.language.el_gr/: strings.po
pvr.kofin/resources/language/resource.language.en_au/: strings.po
pvr.kofin/resources/language/resource.language.en_gb/: strings.po
pvr.kofin/resources/language/resource.language.en_nz/: strings.po
pvr.kofin/resources/language/resource.language.en_us/: strings.po
pvr.kofin/resources/language/resource.language.eo/: strings.po
pvr.kofin/resources/language/resource.language.es_ar/: strings.po
pvr.kofin/resources/language/resource.language.es_es/: strings.po
pvr.kofin/resources/language/resource.language.es_mx/: strings.po
pvr.kofin/resources/language/resource.language.et_ee/: strings.po
pvr.kofin/resources/language/resource.language.eu_es/: strings.po
pvr.kofin/resources/language/resource.language.fa_af/: strings.po
pvr.kofin/resources/language/resource.language.fa_ir/: strings.po
pvr.kofin/resources/language/resource.language.fi_fi/: strings.po
pvr.kofin/resources/language/resource.language.fo_fo/: strings.po
pvr.kofin/resources/language/resource.language.fr_ca/: strings.po
pvr.kofin/resources/language/resource.language.fr_fr/: strings.po
pvr.kofin/resources/language/resource.language.gl_es/: strings.po
pvr.kofin/resources/language/resource.language.he_il/: strings.po
pvr.kofin/resources/language/resource.language.hi_in/: strings.po
pvr.kofin/resources/language/resource.language.hr_hr/: strings.po
pvr.kofin/resources/language/resource.language.hu_hu/: strings.po
pvr.kofin/resources/language/resource.language.hy_am/: strings.po
pvr.kofin/resources/language/resource.language.id_id/: strings.po
pvr.kofin/resources/language/resource.language.is_is/: strings.po
pvr.kofin/resources/language/resource.language.it_it/: strings.po
pvr.kofin/resources/language/resource.language.ja_jp/: strings.po
pvr.kofin/resources/language/resource.language.ko_kr/: strings.po
pvr.kofin/resources/language/resource.language.lt_lt/: strings.po
pvr.kofin/resources/language/resource.language.lv_lv/: strings.po
pvr.kofin/resources/language/resource.language.mi/: strings.po
pvr.kofin/resources/language/resource.language.mk_mk/: strings.po
pvr.kofin/resources/language/resource.language.ml_in/: strings.po
pvr.kofin/resources/language/resource.language.mn_mn/: strings.po
pvr.kofin/resources/language/resource.language.ms_my/: strings.po
pvr.kofin/resources/language/resource.language.mt_mt/: strings.po
pvr.kofin/resources/language/resource.language.my_mm/: strings.po
pvr.kofin/resources/language/resource.language.nb_no/: strings.po
pvr.kofin/resources/language/resource.language.nl_nl/: strings.po
pvr.kofin/resources/language/resource.language.pl_pl/: strings.po
pvr.kofin/resources/language/resource.language.prs/: strings.po
pvr.kofin/resources/language/resource.language.pt_br/: strings.po
pvr.kofin/resources/language/resource.language.pt_pt/: strings.po
pvr.kofin/resources/language/resource.language.ro_ro/: strings.po
pvr.kofin/resources/language/resource.language.ru_ru/: strings.po
pvr.kofin/resources/language/resource.language.si_lk/: strings.po
pvr.kofin/resources/language/resource.language.sk_sk/: strings.po
pvr.kofin/resources/language/resource.language.sl_si/: strings.po
pvr.kofin/resources/language/resource.language.sq_al/: strings.po
pvr.kofin/resources/language/resource.language.sr_rs/: strings.po
pvr.kofin/resources/scripts/: service.py  trigger.py
scripts/: build-android.sh  build-local.sh  build.sh  package.sh
scripts/i18n/: README.md  classify.py  gen.py  po_lib.py  pocheck.py  validate.py
scripts/i18n/tr/: ca_es.json  cs_cz.json  da_dk.json  de_de.json  el_gr.json  es_es.json  es_mx.json  fi_fi.json  fr_ca.json  fr_fr.json  hu_hu.json  it_it.json  ja_jp.json  ko_kr.json  nb_no.json  nl_nl.json  pl_pl.json  pt_br.json  pt_pt.json  ro_ro.json  ru_ru.json  sk_sk.json  sv_se.json  uk_ua.json  zh_cn.json  zh_tw.json
src/: IptvSimple.cpp  IptvSimple.h  addon.cpp  addon.h
src/iptvsimple/: CatchupController.cpp  CatchupController.h  ChannelGroups.cpp  ChannelGroups.h  Channels.cpp  Channels.h  ConnectionManager.cpp  ConnectionManager.h  InstanceSettings.cpp  InstanceSettings.h  M3UParser.cpp  M3UParser.h  Providers.cpp  Providers.h
src/iptvsimple/data/: BaseEntry.h  Channel.cpp  Channel.h  ChannelEpg.cpp  ChannelEpg.h  EpgEntry.cpp
src/iptvsimple/jellyfin/: JellyfinAuth.cpp  JellyfinAuth.h  JellyfinChannelLoader.cpp  JellyfinChannelLoader.h  JellyfinClient.cpp  JellyfinClient.h  JellyfinRecordingManager.cpp  JellyfinRecordingManager.h
src/iptvsimple/utilities/: FileUtils.cpp  FileUtils.h  JsonUtils.h  SettingsMigration.cpp  StreamUtils.cpp  StreamUtils.h  TimeUtils.h  UidUtils.h  WebUtils.cpp  WebUtils.h
(+13 files in other folders)
